implemented singleton patern for current vim configuration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 include("tools/gate/cmake/HunterGate.cmake")
 
 HunterGate(
-	URL "https://github.com/cpp-pm/hunter/archive/v0.23.218.tar.gz"
-	SHA1 "9a3594a61227967fb92159339ba326701b287b19"
+	URL "https://github.com/cpp-pm/hunter/archive/v0.23.240.tar.gz"
+	SHA1 "ca19f3769e6c80cfdd19d8b12ba5102c27b074e0"
 )
 project(viminfo)
 
@@ -16,8 +16,11 @@ find_package(CURL CONFIG REQUIRED)
 hunter_add_package(nlohmann_json)
 find_package(nlohmann_json CONFIG REQUIRED)
 
-#hunter_add_package(Boost COMPONENTS system filesystem)
-#find_package(Boost CONFIG REQUIRED system filesystem program_options)
+hunter_add_package(Boost COMPONENTS system filesystem program_options)
+find_package(Boost CONFIG REQUIRED system filesystem program_options)
+
+#hunter_add_package(BoostProcces)
+#find_package(BoostProcces CONFIG REQUIRED)
 
 add_library(shell STATIC
 	${CMAKE_CURRENT_SOURCE_DIR}/source/shell.cpp
@@ -28,6 +31,9 @@ add_library(plugin STATIC
 add_library(webutils STATIC
 	${CMAKE_CURRENT_SOURCE_DIR}/source/webutils.cpp
 )
+add_library(vimconfig STATIC
+	${CMAKE_CURRENT_SOURCE_DIR}/source/singleton.cpp
+)
 target_include_directories(plugin
 	PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
@@ -37,13 +43,25 @@ target_include_directories(shell
 target_include_directories(webutils
 	PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
-add_executable(viminfo source/main.cpp)
+target_include_directories(vimconfig
+	PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
+add_executable(
+		viminfo source/main.cpp
+)
 target_include_directories(viminfo
 	PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
-target_link_libraries(plugin PUBLIC nlohmann_json::nlohmann_json)
-target_link_libraries(webutils PRIVATE CURL::libcurl)
+target_link_libraries(vimconfig PUBLIC
+	Boost::filesystem Boost::system)
 target_link_libraries(
-	viminfo PUBLIC shell plugin webutils 
+		plugin PUBLIC nlohmann_json::nlohmann_json
+)
+target_link_libraries(
+		webutils PRIVATE CURL::libcurl
+)
+
+target_link_libraries(
+	viminfo PUBLIC shell vimconfig plugin webutils
 )
 
