--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,17 @@
-cmake_minimum_required(VERSION 3.9) 
+cmake_minimum_required(VERSION 3.4) 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include("tools/gate/cmake/HunterGate.cmake")
 
+#HunterGate(
+#	URL "https://github.com/cpp-pm/hunter/archive/v0.23.240.tar.gz"
+#	SHA1 "ca19f3769e6c80cfdd19d8b12ba5102c27b074e0"
+#)
+
 HunterGate(
-	URL "https://github.com/cpp-pm/hunter/archive/v0.23.240.tar.gz"
-	SHA1 "ca19f3769e6c80cfdd19d8b12ba5102c27b074e0"
+	URL "https://github.com/cpp-pm/hunter/archive/v0.23.218.tar.gz"
+    SHA1 "9a3594a61227967fb92159339ba326701b287b19"	
 )
 project(viminfo)
 
@@ -19,8 +24,8 @@ find_package(nlohmann_json CONFIG REQUIRED)
 hunter_add_package(Boost COMPONENTS system filesystem program_options)
 find_package(Boost CONFIG REQUIRED system filesystem program_options)
 
-#hunter_add_package(BoostProcces)
-#find_package(BoostProcces CONFIG REQUIRED)
+hunter_add_package(BoostProcess)
+find_package(BoostProcess CONFIG REQUIRED)
 
 add_library(shell STATIC
 	${CMAKE_CURRENT_SOURCE_DIR}/source/shell.cpp
@@ -52,8 +57,8 @@ add_executable(
 target_include_directories(viminfo
 	PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
-target_link_libraries(vimconfig PUBLIC
-	Boost::filesystem Boost::system)
+target_link_libraries(
+	vimconfig PUBLIC Boost::filesystem Boost::system BoostProcess::boost_process)
 target_link_libraries(
 		plugin PUBLIC nlohmann_json::nlohmann_json
 )
