--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tools/gate"]
 	path = tools/gate
 	url = https://github.com/cpp-pm/gate
+[submodule "tools/boost-process"]
+	path = tools/boost-process
+	url = https://github.com/klemens-morgenstern/boost-process.git
