--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,18 @@
-cmake_minimum_required(VERSION 3.4) 
+cmake_minimum_required(VERSION 3.9) 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include("tools/gate/cmake/HunterGate.cmake")
 
-#HunterGate(
-#	URL "https://github.com/cpp-pm/hunter/archive/v0.23.240.tar.gz"
-#	SHA1 "ca19f3769e6c80cfdd19d8b12ba5102c27b074e0"
-#)
-
 HunterGate(
-	URL "https://github.com/cpp-pm/hunter/archive/v0.23.218.tar.gz"
-    SHA1 "9a3594a61227967fb92159339ba326701b287b19"	
+	URL "https://github.com/cpp-pm/hunter/archive/v0.23.240.tar.gz"
+	SHA1 "ca19f3769e6c80cfdd19d8b12ba5102c27b074e0"
 )
+
+#HunterGate(
+#	URL "https://github.com/cpp-pm/hunter/archive/v0.23.218.tar.gz"
+#    SHA1 "9a3594a61227967fb92159339ba326701b287b19"	
+#)
 project(viminfo)
 
 hunter_add_package(CURL)
@@ -24,49 +24,24 @@ find_package(nlohmann_json CONFIG REQUIRED)
 hunter_add_package(Boost COMPONENTS system filesystem program_options)
 find_package(Boost CONFIG REQUIRED system filesystem program_options)
 
-hunter_add_package(BoostProcess)
-find_package(BoostProcess CONFIG REQUIRED)
-
-add_library(shell STATIC
-	${CMAKE_CURRENT_SOURCE_DIR}/source/shell.cpp
-)
-add_library(plugin STATIC
-	${CMAKE_CURRENT_SOURCE_DIR}/source/plugin.cpp
-)
-add_library(webutils STATIC
-	${CMAKE_CURRENT_SOURCE_DIR}/source/webutils.cpp
-)
-add_library(vimconfig STATIC
-	${CMAKE_CURRENT_SOURCE_DIR}/source/singleton.cpp
-)
-target_include_directories(plugin
-	PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
-)
-target_include_directories(shell
-	PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
-)
-target_include_directories(webutils
-	PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
-)
-target_include_directories(vimconfig
-	PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
-)
 add_executable(
-		viminfo source/main.cpp
+		${PROJECT_NAME}
+		${CMAKE_CURRENT_SOURCE_DIR}/source/main.cpp
+		${CMAKE_CURRENT_SOURCE_DIR}/source/shell.cpp
+		${CMAKE_CURRENT_SOURCE_DIR}/source/singleton.cpp
+		${CMAKE_CURRENT_SOURCE_DIR}/source/plugin.cpp
+		${CMAKE_CURRENT_SOURCE_DIR}/source/webutils.cpp
 )
-target_include_directories(viminfo
-	PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
+target_include_directories(
+		${PROJECT_NAME}
+		PUBLIC
+		${CMAKE_CURRENT_SOURCE_DIR}/include
+		${CMAKE_CURRENT_SOURCE_DIR}/tools/boost-process/include
 )
 target_link_libraries(
-	vimconfig PUBLIC Boost::filesystem Boost::system BoostProcess::boost_process)
-target_link_libraries(
-		plugin PUBLIC nlohmann_json::nlohmann_json
+		${PROJECT_NAME}
+		Boost::filesystem
+		Boost::system
+		CURL::libcurl
+		nlohmann_json::nlohmann_json
 )
-target_link_libraries(
-		webutils PRIVATE CURL::libcurl
-)
-
-target_link_libraries(
-	viminfo PUBLIC shell vimconfig plugin webutils
-)
-
